src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__features__feature_name_start_with_number_and_underscore.snap
---
source: src/tests/krate/publish/features.rs
expression: crates
---
[
  {
    "name": "foo",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "ee98333f656a2a5f7b21a3b8f50313a8f5f1e7333f37a5dc7537ff5877d286ef",
    "features": {
      "0foo1.bar": [],
      "_foo2.bar": []
    },
    "yanked": false
  }
]
